--- a/src/part1/affine_space.qmd
+++ b/src/part1/affine_space.qmd
@@ -6,6 +6,9 @@ crossref:
   chapters: true
 ---
 
+
+{{< include ../latexmacros.qmd >}}
+
 곡선과 표면은 일반적으로 점들(points)로 구성된 공간에 존재하는 특별한 속성을 가진 점들의 집합으로 간주된다. 일반적으로 translations, rotations, projections 등과 같은 특정 변환 하에서 불변하는 기하학적 특성이 중요하다. 점으로 이루어진 공간을 소위 벡터 공간으로 모델링할 수 있지만 이는 여러 가지 이유로 그다지 만족스럽지 않다. 한 가지 중요한 이유는 원점이라고 불리는 영 벡터($\boldsymbol{0}$)에 해당하는 점이 실제로 특권을 가질 이유가 없음에도 특별한 역할을 하기 때문이다. 또 다른 이유는 parallelism 과 같은 특정 개념이 어색한 방식으로 처리된다는 것이다. 그러나 더 중요한 이유는 벡터 공간과 아핀 공간이 실제로 다른 기하학적 구조를 가지고 있다는 것이다. 벡터 공간의 기하학적 속성은 동형사상에 대해 불변인 반면, 아핀 공간의 기하학적 속성은 전단사 아핀 사상 그룹에서 불변하며 이 두 그룹은 동형이 아니다. 대략적으로 말하면 선형 맵보다 아핀 맵이 더 많다.
 
 아핀 공간은 기하학을 수행하기 위한 더 나은 틀을 제공한다. 특히 점, 곡선, 표면 등을 본질적인 방식, 즉 특정 좌표계의 선택과 관계없이 처리하는 것이 가능하다. 물리학에서와 마찬가지로 이것은 실제로 무슨 일이 일어나고 있는지 이해하는 데 매우 바람하다. 물론 최종적으로 계산을 수행하려면 좌표계를 선택해야 하지만 실제로 필요할 때까지는 좌표계에 의존하려는 유혹을 물리치는 법을 배워야 한다. 아핀 공간은 무엇보다도 움직임, 궤적, 물리적 힘을 다루는 데 적합하다. 따라서 아핀 기하학은 운동학, 역학 및 기타 물리학 부분(예: 탄성)을 깔끔하게 표현하는 데 매우 중요하게 된다.
@@ -14,24 +17,24 @@ crossref:
 
 ## 아핀 공간의 정의와 성질
 
-### 아핀 공간의 정의와 기본적 성질
+### 아핀 공간의 정의와 기본적 성질 {#sec-AG_affine_space}
 
 벡터를 다룰 때 벡터공간을 정의하는 것처럼 아핀공간을 정의하자. 아핀 공간은 어떤 벡터 공간에 대해 정의하는 것이 가장 깔끔하다. 아핀 공간에 대해 여러가지 동등한 정의가 존재하지만 다음의 정의를 따른다.
 
 
 ::: {.callout-note appearance="minimal"}
 
-::: {#def-affine_space}
+::: {#def-AG_affine_space}
 
 #### 아핀 공간
 
-벡터공간 $E$ 에 포함되는 원소를 모두 포함하는 집합 $\mathcal{E}$ 에 $\Theta : \mathcal{E} \times \mathcal{E} \to E$ 인 사상이 다음을 만족하면 $\mathcal{E}$ 를 **아핀 공간(affine space)** 라고 한다.
+$\R-$ 혹은 $\C-$ 벡터공간 $E$ 에 포함되는 원소를 모두 포함하는 집합 $\mathcal{E}$ 에 $\Theta : \mathcal{E} \times \mathcal{E} \to E$ 이 다음을 만족하면 $\mathcal{E}$ 를 **아핀 공간(affine space)** 라고 한다.
 
-&emsp; ($1$) 임의의 고정된 $A\in E$ 에 대해 $\Theta_A(B) = \Theta(A,\,B)$ 는 전단사이다.
+&emsp;($1$) 임의의 고정된 $A\in E$ 에 대해 $\Theta_A(B) = \Theta(A,\,B)$ 는 $\mathcal{E}\mapsto E$ 인 전단사 함수이다.
 
-&emsp; ($2$) 각각의 $A,\,B,\,C\in \mathcal{E}$ 에 대해 $\Theta (A,\,C) + \Theta(C,\,B) = \Theta(A, C)$ 이다. 
+&emsp;($2$) (**Chasles' relation**) 각각의 $A,\,B,\,C\in \mathcal{E}$ 에 대해 $\Theta (A,\,C) + \Theta(C,\,B) = \Theta(A, C)$ 이다. 
 
-이 때 아핀 공간 $\mathcal{E}$ 를 $\langle \mathcal{E},\, E,\,\Theta\rangle$ 로 표현하며 $E$ 를 $\mathcal{E}$ 의 **방향(direction)** 혹은 **내재하는 벡터공간 (underlying vector space)** 라고 한다. $\mathcal{E}$ 의 원소를 **점(point)** 이라고 하며 $E$ 의 차원을 $\mathcal{E}$ 의 차원 이라고 한다. 그리고 $\Theta (A,\,B)$ 를 $\overrightarrow{AB}$ 로 쓴다.
+이 때 아핀 공간 $\mathcal{E}$ 를 $\langle \mathcal{E},\, E,\,\Theta\rangle$ 혹은 $\mathcal{E}(E,\,\Theta)$ 로 표현하며 $E$ 를 $\mathcal{E}$ 의 **방향(direction)** 혹은 $\mathcal{E}$ 에 **내재된 벡터공간 (underlying vector space)** 라고 한다. $\mathcal{E}$ 의 원소를 **점(point)** 이라고 하며 $E$ 의 차원을 $\mathcal{E}$ 의 차원 이라고 하고 $\dim(\mathcal{E})$ 라고 표기한다. 그리고 $\Theta (A,\,B)$ 를 $\overrightarrow{AB}$ 로 쓴다.
 :::
 :::
 
@@ -41,89 +44,131 @@ crossref:
 
 </br>
 
-::: {#prp-affile_space_1}
-여기서 ($2$) 를 **Chasles' relation** 이라고 한다. $\Theta(A, A)=\overrightarrow{AA}=\overrightarrow{0}$ 이다. 또한 $\overrightarrow{AC}=-\overrightarrow{CA}$ 이다.
+<div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+::: {#prp-AG_affile_space_1}
+$\Theta(A, A)=\overrightarrow{AA}=\overrightarrow{0}$ 이다. 또한 $\overrightarrow{AB}=-\overrightarrow{BA}$ 이다.
 
 :::
+
+</div>
 
 ::: {.proof}
 
-$A=B=C$ 라 놓으면 $\overrightarrow{AA}=0$ 임을 보일 수 있다. 또한 $B=A$ 로 놓으면 $\overrightarrow{AC}+\overrightarrow{CA}= \overrightarrow{AA}=\overrightarrow{0}$ 이므로 $\overrightarrow{AC}= - \overrightarrow{CA}$ 이다. $\square$
+$A=B=C$ 라 놓으면 $\overrightarrow{AA}=0$ 임을 보일 수 있다. $\overrightarrow{AB}+\overrightarrow{BC}=\overrightarrow{AC}$ 에서 $C=A$ 로 놓으면 $\overrightarrow{AB}+\overrightarrow{BA}= \overrightarrow{AA}=\overrightarrow{0}$ 이므로 $\overrightarrow{AB}= - \overrightarrow{BA}$ 이다. $\square$
 
 :::
 
 </br>
 
-:::{#exm-affine_space_1}
+다음 명제는 정의에 의해 자명하다.
 
-모든 벡터 공간 $V$ 는 $\Theta (u,\,v) = u-v$ 에 대해 아핀공간이다.
+<div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+::: {#prp-AG_affile_space_2}
+
+아핀 공간 $\mathcal{E}(E,\,\Theta)$ 와 임의의 $A\in \mathcal{E}$ 에 대해 $\Theta_A(\mathcal{E})=E$ 이다.
 
 :::
 
+</div></br>
+
+이제 아핀공간을 이해하기 위해 몇가지 예를 들어 보자.
+
+<div class="border" style="background-color:#F2F4F4  ;padding:5px;">
+
+:::{#exm-AG_affine_space_0}
+
+공집합은 임의의 벡터공간에 대해 아핀공간이며 이 때 그 차원은 $0$ 으로 정의한다.
+
+:::
+
+</div>
+
 </br>
+<div class="border" style="background-color:#F2F4F4  ;padding:5px;">
 
-::: {#exm-affine_space_2}
+:::{#exm-AG_affine_space_1}
 
-벡터공간 $E_1,\,E_2$ 에 대한 아핀 공간 $\mathcal{E}_1 = (E_1,\,\Theta_1),\,\mathcal{E}_2 = (E_2,\,\Theta_2)$ 를 생각하자. 데카르트곱 $E_1 \times E_2$ 은 벡터공간이며 여기에 $\Theta : (\mathcal{E}_1 \times \mathcal{E}_2) \times (\mathcal{E}_1 \times \mathcal{E}_2) \to E_1 \times E_2$ 를
+모든 벡터 공간 $V$ 는 $\Theta (u,\,v) = u-v$ 에 대해 아핀공간이다. 즉 임의의 벡터공간에 자연스러운 아핀공간이 존재한다.
+
+:::
+
+</div></br>
+
+<div class="border" style="background-color:#F2F4F4  ;padding:5px;">
+
+::: {#exm-AG_affine_space_2}
+
+벡터공간 $E_1,\,E_2$ 에 대한 아핀 공간 $\mathcal{E}_1 (E_1,\,\Theta_1),\,\mathcal{E}_2 (E_2,\,\Theta_2)$ 를 생각하자. 데카르트곱 $E_1 \times E_2$ 은 벡터공간이며 여기에 $\Theta : (\mathcal{E}_1 \times \mathcal{E}_2) \times (\mathcal{E}_1 \times \mathcal{E}_2) \to E_1 \times E_2$ 를
 
 $$
 \Theta ((A, B),\, (C,\,D)) = (\Theta_1(A, B),\, \Theta_2(C,\,D))
 $$
 
-로 정의한다면 $\mathcal{E}_1 \times \mathcal{E}_2 = (E_1 \times E_2,\, \Theta)$ 인 아핀공간이다.
+로 정의한다면 $(\mathcal{E}_1 \times \mathcal{E}_2) (E_1 \times E_2,\, \Theta)$ 는 아핀공간이다.
 
 :::
 
-</br>
+</div></br>
 
-::: {#prp-parallelogram_rule}
+<div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+::: {#prp-AG_parallelogram_rule}
 
 #### 평행사변형 규칙
 
-아핀 공간 $\mathcal{E}$ 와 $A,\,B,\,A',\,B'\in \mathcal{E}$ 에 대해 다음이 성립한다. 
+아핀 공간 $\mathcal{E}$ 와 $A,\,B,\,C,\,D\in \mathcal{E}$ 에 대해 다음이 성립한다. 
 
 $$
-\overrightarrow{AB}=\overrightarrow{A'B'} \iff \overrightarrow{AA'}=\overrightarrow{BB'}.
+\overrightarrow{AB}=\overrightarrow{DC} \iff \overrightarrow{AD}=\overrightarrow{BC}.
 $$
 
+여기서 각각의 등식이 성립하는 사각형 $AA'B'B$ 를 **평행사면형(paralleogram)** 이라고 한다.
 :::
+
+</div>
 
 ::: {.proof}
 
-$\overrightarrow{AB}=\overrightarrow{A'B'}$ 이라면 
+![평행사변형 규칙](images/parallelogram.png){#fig-AG_parallelogram_rule width=200}
+
+$\overrightarrow{AB}=\overrightarrow{DC}$ 이라면 
 
 $$
-\overrightarrow{AA'}=\overrightarrow{AB}+\overrightarrow{BB'}+\overrightarrow{B'A'} = \overrightarrow{A'B'}  +\overrightarrow{BB'}+\overrightarrow{B'A'} = \overrightarrow{BB'}
+\overrightarrow{AD}=\overrightarrow{AB}+\overrightarrow{BC}+\overrightarrow{CD} = \overrightarrow{DC}  +\overrightarrow{BC}+\overrightarrow{CD} = \overrightarrow{BC}
 $$
 
 이다. 같은 방식으로 역을 증명 할 수 있다. $\square$
 
 :::
 
+</br><div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+::: {#prp-AG_addition_of_affine_and_vector}
+아핀 공간 $\mathcal{E}(E, \Theta)$ 에 대해 $A\in \mathcal{E},\, u\in E$ 일 때 $\overrightarrow{AB}=u$ 를 만족하는 $B\in \mathcal{E}$ 가 유일하게 존재한다. 이 때 $B=A+u$ 라고 쓴다.
+
+:::
+
+</div>
+
+::: {.proof}
+
+see @exr-audin_1_47.
+:::
 
 </br>
 
-::: {#prp-addition_of_affine_and_vector}
-아핀 공간 $\langle \mathcal{E},\,  E, \Theta\rangle$ 에 대해 $A\in \mathcal{E},\, u\in E$ 일 때 $\overrightarrow{AB}=u$ 를 만족하는 $B\in \mathcal{E}$ 가 유일하게 존재한다. 이 때 $B=A+u$ 라고 쓴다.
+### 아핀 공간의 벡터공간화와 아핀부분공간 {#sec-AG_vectorization}
 
-:::
-
-::: {.proof}
-trivial
-:::
-
-
-
-### 아핀 공간의 벡터공간화
-
-아핀 공간을 쉽게 설명하면 영벡터가 없는 벡터공간이라고들 한다. 그렇다면 아핀 공간에 어떤 임의의 영벡터를 정하면 아핀공간은 벡터공간이 될까? 정답은 그렇다 이다. 이를 아핀 공간의 **벡터공간화 (vectorializatin)** 이라고 한다.
+아핀 공간을 쉽게 설명하면 영벡터가 없는 벡터공간이라고들 한다. 그렇다면 아핀 공간에 어떤 임의의 영벡터를 정하면 아핀공간은 벡터공간이 될까? 정답은 그렇다 이다.
 
 ::: {.callout-note appearance="minimal"}
-::: {#def-vectorialization}
+::: {#def-AG_vectorialization}
 
 #### 벡터공간화 
 
-아핀 공간 $\mathcal{E}$ 의 한 점 $A\in \mathcal{E}$ 에 대해 아래와 같은 집합 $\mathcal{E}_A$ $\mathcal{E}$ 의 $A$ 에 대한 **벡터공간화 (vectorialization)** 이라고 한다.
+아핀 공간 $\mathcal{E}$ 의 한 점 $A\in \mathcal{E}$ 에 대해 아래와 같은 집합 $\mathcal{E}_A$ 를 $\mathcal{E}$ 의 $A$ 에 대한 벡터공간 이라고 하며 이 과정을 **벡터공간화 (vectorialization)** 이라고 한다.
 
 $$
 \mathcal{E}_A = \{\overrightarrow{AX} : X\in \mathcal{E}\}.
@@ -132,6 +177,347 @@ $$
 :::
 :::
 
+</br>
 
-벡터 공간 $E$ 에 대해 아핀 공간 $\langle \mathcal{E},\, E,\, \Theta\rangle$ 은 유일하게 정해지기 때문에 $E$ 에 대한 자연스러운 아핀 구조가 존재한다고 할 수 있다. 그러나 이 아핀 공간에 대한 벡터공간화는 원점이 되는 벡터의 선택에 따라 무수히 많기 때문에 아핀 공간에 대한 하연스러운 벡터 구조는 존재하지 않는다고 말할 수 있다.
+@exm-AG_affine_space_1 에서 보았듯이 벡터 공간 $E$ 에 대해 자연스러운 아핀 구조가 존재한다. 그러나 이 아핀 공간에 대한 벡터공간화는 원점이 되는 벡터의 선택에 따라 무수히 많기 때문에 아핀 공간에 대한 자연스러운 벡터 구조는 존재하지 않는다. 
 
+</br>
+
+우리는 선형대수학에서 벡터부분공간을 정의했다. 여기서는 아핀 부분공간을 정의하기로 하자. 
+
+
+::: {.callout-note appearance="minimal"}
+::: {#def-AG_affine_subspace}
+
+#### 아핀부분공간
+
+아핀공간 $\mathcal{E}(E,\,\Theta)$ 에 대해 $\mathcal{F}\subset \mathcal{E}$ 가 공집합이거나, 어떤 $A\subset \mathcal{E}$ 에 대해 $\Theta_A(\mathcal{F})$ 가 $E$ 의 부분벡터공간일 때 $A\in \mathcal{F}$ 이면 $\mathcal{F}(\Theta_A(\mathcal{F}),\, \Theta)$ 는 아핀공간이며 $\mathcal{E}$ 의 **아핀부분공간(affine subspace)** 이라고 한다.
+
+:::
+:::
+
+</br> 
+
+@exm-AG_affine_space_0 에서 보았듯이 공집합이라면 자명한 아핀공간이다. 이제 공집합이 아닌 경우를 살펴 보자.
+
+</br><div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+::: {#lem-AG_existance_of_affine_subspace_1}
+
+$\mathcal{F}$ 가 아핀공간 $\mathcal{E}(E,\,\Theta)$ 의 부분집합이며, 어떤 $A\in \mathcal{F}$ 에 대해 $F=\Theta_A(\mathcal{F})$ 가 $E$ 의 벡터부분공간이라면 임의의 $B\in \mathcal{F}$ 에 대해서도 $\Theta_B(\mathcal{F})=F$ 이다.
+
+:::
+
+</div>
+
+::: {.proof}
+
+임의의 $X\in \mathcal{F}$ 에 대해 $\overrightarrow{AX}\in F$ 이다. $\overrightarrow{BX}= \overrightarrow{BA} +\overrightarrow{AX}$ 이며 $\overrightarrow{BA},\, \overrightarrow{AX}\in F$ 이고 $F$ 가 벡터공간이므로  $\overrightarrow{BX}\in F$ 이다. 즉 $\Theta_B(\mathcal{F}) \subset F$ 이다. 임의의 $v\in \Theta_A(\mathcal{F})$ 에 대해 $\overrightarrow{AY}=v$ 인 $Y\in \mathcal{F}$ 가 존재한다. $B\in \mathcal{F}$ 이므로 $\overrightarrow{AB}\in F$ 이며 $F$ 가 벡터공간이므로 $\overrightarrow{AB}+\overrightarrow{AY}\in F=\Theta_A(\mathcal{F})$ 이다. 즉 $\overrightarrow{AB}+\overrightarrow{AY} = \overrightarrow{AX}$ 인 $X\in \mathcal{F}$ 가 존재한다. 
+
+<center>
+![](images/affinespace2.png){width=200}
+
+</center>
+$$
+\overrightarrow{BX} = \overrightarrow{BA}+\overrightarrow{AY}+\overrightarrow{YX}= -\overrightarrow{AX}+\overrightarrow{AY}+\overrightarrow{AY} + \overrightarrow{YA}+\overrightarrow{AX} = \overrightarrow{AY} = v
+$$
+
+이므로 $v\in \Theta_B(\mathcal{F})$ 이다. 즉 $F\subset \Theta_B(\mathcal{F})$ 이며 앞의 결과와 함께 $\Theta_B(\mathcal{F})=F$ 이다. $\square$
+
+:::
+
+</br>
+
+즉 @lem-AG_existance_of_affine_subspace_1 에 의하면 모든 $X\in \mathcal{F}$ 에 대해 $\Theta_X(\mathcal{F})$ 는 동일하므로 $\mathcal{F}$ 에 맞는 벡터공간 $F$ 와 chasles' relation $\Theta_\mathcal{F}$ 가 존재한다는 것을 알 수 있다. 즉 $\mathcal{F}$ 는 아핀공간이다. 또한 $\mathcal{F}$ 에 포함되는 한 점에 의해 charles' relation 이 유일하게 정해지므로 이 아핀공간도 유일하게 정해진다는 것을 알 수 있다. 이를 정리하면 다음과 같다.
+
+</br>
+
+<div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+::: {#thm-AG_existance_of_affine_subspace_1}
+
+아핀공간 $\mathcal{E}(E,\,\Theta)$ 에 대해 $\mathcal{F}\subset\mathcal{E}$ 일 때 $A\in \mathcal{F}$ 에 대해 $\Theta_A(\mathcal{F})$ 가 $E$ 의 벡터부분공간이며 $\Theta_A(\mathcal{F})$ 를 내포하고 $A$ 를 지나는 아핀공간 $\mathcal{F}(\Theta_A(\mathcal{F}),\, \Theta)$ 는 유일하게 정해진다. 
+:::
+
+</div></br>
+
+
+<div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+::: {#thm-AG_existance_of_affine_subspace_2}
+
+아핀공간 $\mathcal{E}(E,\,\Theta)$ 에 대해 $F$ 가 $E$ 의 부분벡터공간이며 $A\in \mathcal{E}$ 일 때 $F$ 를 내포하며 $A$ 를 지나는 아핀부분공간이 유일하게 존재한다.
+
+:::
+
+</div>
+
+::: {.proof}
+
+$\mathcal{F}$ 가 $A$ 를 지나며 $F$ 가 내재된 아핀부분공간이라고 하자. 그렇다면 $\Theta_A(\mathcal{F})=F$ 이며,
+
+$$
+\mathcal{F} = \{X\in \mathcal{E} : \overrightarrow{AX}\in F\}
+$$
+
+이다. 역으로 위의 $\mathcal{F}$ 는 $F$ 를 내포하며 $A$ 를 지나는 아핀부분공간이다. $\square$
+
+:::
+
+</br>
+
+<div class="border" style="background-color:#F2F4F4  ;padding:5px;">
+
+:::{#exm-AG_affine_subspace_1}
+
+#### 영차원 부분공간과 선
+
+$0$ 차원 아핀공간은 유일한 점을 가진다. 모든 아핀공간 $\mathcal{E}$ 의 점은 그 자체로 아핀공간이다. 아핀공간의 1차원 부분공간을 **선(line)** 이라고 하고 아핀공간의 2차원 부분공간을 **평면(plaine)** 이라고 한다.
+
+:::
+
+</div></br>
+
+
+<div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+:::{#prp-AG_affine_subspace_and_inverse_of_linear_mapping}
+
+아핀 공간 $\mathcal{E}(E,\,\Theta)$ 를 생각하자. 벡터공간 $F$ 에 대해 $f:E\to F$ 가 선형사상이라고 하자. 이 때 $v\in f(E)$ 에 대해 $f^{-1}(\{v\})$ 는 $\ker (f)$ 가 내재된 $\mathcal{E}$ 의 아핀부분공간이다.
+
+:::
+
+</div></br>
+
+::: {.proof}
+
+$\ker (f)$ 는 $E$ 의 벡터부분공간이다. 임의의 $x,\,y \in f^{-1}(\{v\})$ 에 대해 $f(x-y) = 0_F$ 이므로 $x-y \in \ker (f)$ 이다. 또한 $k\in \ker(f)$ 와 $u\in f^{-1}(\{v\})$ 에 대해 $k+u\in f^{-1}(\{v\})$ 이다. 따라서 $f^{-1}(\{v\})$ 는 $\ker (f)$ 가 내재된 $\mathcal{E}$ 의 아핀부분공간이다. $\square$
+
+
+:::
+
+</br>
+
+
+<div class="border" style="background-color:#F2F4F4  ;padding:5px;">
+
+:::{#exm-AG_affine_subspace_2}
+
+#### 선형 시스템과 아핀공간
+
+선형 시스템 $A\bf{x}=\bf{b}$ 의 해는 벡터공간은 아니지만 아핀공간이다. $V=\{\bf{x}: A\bf{x}=\bf{0}\}$ 는 벡터공간이며 이 벡터공간을 내포하는 아핀공간이다. 또한 벡터공간 $E$ 의 벡터부분공간 $F$ 와 $u_0\in E$ 에 대해 $F+u_0=\{f+u_0:f\in F\}$ 역시 $F$ 를 내포하는 아핀부분공간이다.
+
+
+:::
+
+</div></br>
+
+
+### 아핀공간의 집합적 성질 {#sec-AG_set_properties_of_affine_space}
+
+
+<div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+:::{#prp-AG_intersection_of_affine_subspace}
+
+아핀 부분공간의 교집합은 아핀부분공간이다.
+
+:::
+
+</div>
+
+::: {.proof}
+
+아핀 공간 $\mathcal{E}$ 의 부분공간으로 이루어진 집합족 $\{\mathcal{F}_i\}_{i \in I}$ 에 대해 $\mathcal{F}=\bigcap_{i\in I} \mathcal{F}_i$ 라고 하자. $\mathcal{F}=\varnothing$ 일 경우는 자명하므로 공집합이 아닐 경우만 생각하자. $F_i$ 를 $\mathcal{F}_i$ 에 내재된 벡터공간이라고 하면 $F=\bigcap_{i\in I}F_i$ 는 $E$ 의 벡터부분공간이며 따라서 정해진 $A\in \mathcal{F}$ 를 포함하며 $F$ 를 내포하는 아핀부분공간이 정해진다. 
+
+
+:::
+
+</br>
+
+이로부터 다음 명제는 자명하다.
+
+<div class="border" style="background-color:#FFF0F5 ;padding:5px;">
+
+:::{#prp-AG_smallest_affine_subspace_contains_a_subset}
+
+$S$ 가 $\mathcal{E}$ 의 부분집합일 때 $S$ 를 포함하는 모든 아핀부분공간의 교집합은 $S$ 를 포함하는 가장 작은 아핀부분공간이다.
+
+:::
+
+</div></br>
+
+@prp-AG_smallest_affine_subspace_contains_a_subset 의 $S$ 를 포함하는 가장 작은 아핀부분공간을 $S$ 에 의해 생성되는 아핀공간이라고 하고 $\langle S\rangle$ 로 쓴다. 예를 들어 $S=\{A_0,\ldots,\,A_k\}$ 라면 $\langle S\rangle$ 은 $S$ 에 의해 span 되며 $A_0$ 를 포함하는 아핀공간이다. 이 때 $\langle S\rangle$ 은 $\overrightarrow{A_0A_1},\ldots,\,\overrightarrow{A_0A_k}$ 에 span 되는 벡터공간을 내재한다. 이 경우 $\langle S\rangle$ 의 차원은 $k$ 보다 같거나 작다.
+
+</br>
+
+
+::: {.callout-note appearance="minimal"}
+::: {#def-AG_affine_independency}
+
+#### 아핀독립
+
+$k+1$ 개의 점 $\{A_0,\ldots,\,A_k\}$ 에 의해 생성되는 아핀공간의 차원이 $k$ 일 때 $\{A_0,\ldots,\,A_k\}$ 가 **아핀 독립(affine independent)** 이라고 하며 이 때 $(A_0,\ldots,\,A_k)$ 를 $\mathcal{E}$ 의 **아핀 틀(affine frame)** 이라고 한다. 
+
+:::
+:::
+
+</br>
+
+
+
+</br>
+
+## 연습문제 {.unnumbered}
+
+<div class="border" style="background-color:#F0FFFF  ;padding:5px;">
+
+::: {#exr-audin_1_1}
+
+#### Audin 1.1
+
+평행사변형의 두 대각선은 서로 중점에서 만난다는 것을 보여라.
+
+:::
+
+</div>
+
+::: {.solution}
+@prp-AG_parallelogram_rule 를 보자. 평행사변형 $ABCD$ 에서 $\overrightarrow{AC}$ 의 중점을 $M$, $\overrightarrow{BD}$ 의 중점을 $M'$ 이라고 하자. 즉 $\overrightarrow{AM}= \dfrac{1}{2}\overrightarrow{AC}$ 이며 $\overrightarrow{BM'}= \dfrac{1}{2}\overrightarrow{BD}$ 이다.
+
+$$
+\begin{aligned}
+\overrightarrow{MM'} &= \overrightarrow{MA}+ \overrightarrow{AM'} = -\overrightarrow{AM} + \overrightarrow{AB} + \overrightarrow{BM'} \\[0.3em]
+&= - \dfrac{1}{2} \overrightarrow{AC} + \overrightarrow{AB} + \dfrac{1}{2}\overrightarrow{BD} = \dfrac{1}{2}\overrightarrow{CB} + \dfrac{1}{2}\overrightarrow{AD} = 0
+\end{aligned}
+$$
+
+:::
+
+</br>
+
+<div class="border" style="background-color:#F0FFFF  ;padding:5px;">
+
+::: {#exr-audin_1_3}
+
+#### Audin 1.3
+
+아핀공간상의 두 점을 지나는 직선은 유일하다는 것을 증명하라.
+
+:::
+
+</div>
+
+::: {.solution}
+
+아핀공간 $\mathcal{E}(E,\,\Theta)$ 상의 두 점 $A,\,B\in \mathcal{E}$ 를 포함하는 1차원 아핀부분공간 $\mathcal{F}$ 를 생각하자. $\Theta_A(\mathcal{F})$ 가 1차원 벡터공간이며 $B\in \mathcal{F}$ 이므로 $\Theta_A(\mathcal{F})$ 는 $\overrightarrow{AB}$ 로 스팬되는 벡터공간으로 유일하게 정해진다. 따라서 아핀공간상의 $A,\,B$ 를 지나는 직선은 유일하다. 
+
+:::
+
+</br>
+
+<div class="border" style="background-color:#F0FFFF  ;padding:5px;">
+
+::: {#exr-audin_1_4}
+
+#### Audin 1.4
+
+$\mathcal{F}_1,\,\mathcal{F}_2$ 는 아핀공간 $\mathcal{E}$ 의 두 아핀부분공간이다. 어떤 조건에서 $\mathcal{F}_1 \cup \mathcal{F}_2$ 가 아핀부분공간이 되는가?
+
+:::
+
+</div>
+
+::: {.solution}
+
+$F_1,\,F_2$ 를 각각 $\mathcal{F}_1,\,\mathcal{F}_2$ 에 내재하는 벡터공간이라고 하자. 우리는 두 벡터공간의 합집합이 벡터공간일 필요충분조건은 두 벡터공간중 하나가 다른 하나의 부분공간일 때라는 것을 안다. 따라서 한 아핀공간이 다른 아핀공간의 부분아핀공간이어야 한다는 조건이 생기며 이 경우 두 아핀공간의 합집합은 당연히 아핀공간이다.
+
+:::
+
+</br>
+
+<div class="border" style="background-color:#F0FFFF  ;padding:5px;">
+
+::: {#exr-audin_1_5}
+
+#### Audin 1.5
+
+아핀공간의 부분집합 $\mathcal{F}$ 가 아핀부분공간일 필요충분조건은 임의의 $A,\,B\in \mathcal{F}$ 에 대해 $\langle A,\,B\rangle \subset \mathcal{F}$ 인 것임을 보여라.
+:::
+
+</div>
+
+::: {.solution}
+
+($\implies$) $\mathcal{F}$ 가 $\mathcal{E}$ 의 아핀부분공간이라고 하자.
+
+:::
+</br>
+
+<div class="border" style="background-color:#F0FFFF  ;padding:5px;">
+
+::: {#exr-audin_1_6}
+
+#### Audin 1.6
+
+아핀공간상의 점 $\{A_0,\ldots,\,A_k\}$ 가 아핀 독립일 필요충분조건은 모든 $i\in \{0,\ldots,\,k\}$ 에 대해 
+
+$$
+A_i \not\in \langle A_0,\ldots,\,A_{i-1},\,A_{i+1},\ldots,\,A_k\rangle
+$$
+
+임을 보여라.
+
+:::
+
+</div>
+
+::: {.solution}
+
+
+
+:::
+</br>
+
+<div class="border" style="background-color:#F0FFFF  ;padding:5px;">
+
+::: {#exr-audin_1_7}
+
+#### Audin 1.7
+
+아핀공간상의 점 $\{A_0,\ldots,\,A_k\}$ 가 아핀 독립일 필요충분조건은 모든 $i\in \{0,\ldots,\,k\}$ 에 대해 
+
+$$
+A_i \not\in \langle A_0,\ldots,\,A_{i-1}\rangle
+$$
+
+임을 보여라.
+
+:::
+
+</div>
+
+::: {.solution}
+
+
+
+:::
+</br>
+
+<div class="border" style="background-color:#F0FFFF  ;padding:5px;">
+
+::: {#exr-audin_1_47}
+
+#### Audin 1.47
+
+아핀 공간 $\mathcal{E}(E,\,\Theta)$ 를 생각하자. 함수 $\phi:E\times \mathcal{E} \to \mathcal{E}$ 를 다음과 같이 정의한다.
+
+$$
+\phi(M,\, u) = M+u
+$$
+
+이 때 $M'=\phi(M,\,u)$ 일 때 $\overrightarrow{MM'}= u$ 이다. 
+
+:::
+
+</div>
